--- a/01_notebook_executed.ipynb
+++ b/01_notebook_executed.ipynb
@@ -16,10 +16,10 @@
    "id": "60e22449-72ec-41dc-85a8-70a90a1f577e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-30T18:33:01.010441Z",
-     "iopub.status.busy": "2022-09-30T18:33:01.009920Z",
-     "iopub.status.idle": "2022-09-30T18:33:01.027417Z",
-     "shell.execute_reply": "2022-09-30T18:33:01.026726Z"
+     "iopub.execute_input": "2022-09-30T18:35:44.183350Z",
+     "iopub.status.busy": "2022-09-30T18:35:44.183000Z",
+     "iopub.status.idle": "2022-09-30T18:35:44.204755Z",
+     "shell.execute_reply": "2022-09-30T18:35:44.203556Z"
     }
    },
    "outputs": [
@@ -58,10 +58,10 @@
    "id": "5f9cfe48-5a28-4338-bd5e-9a1e2844cd6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-30T18:33:01.031796Z",
-     "iopub.status.busy": "2022-09-30T18:33:01.031346Z",
-     "iopub.status.idle": "2022-09-30T18:33:01.035967Z",
-     "shell.execute_reply": "2022-09-30T18:33:01.035276Z"
+     "iopub.execute_input": "2022-09-30T18:35:44.209603Z",
+     "iopub.status.busy": "2022-09-30T18:35:44.209307Z",
+     "iopub.status.idle": "2022-09-30T18:35:44.214920Z",
+     "shell.execute_reply": "2022-09-30T18:35:44.214018Z"
     }
    },
    "outputs": [
@@ -92,10 +92,10 @@
    "id": "c8794a79-61a1-48b3-9a26-af31086fe622",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-30T18:33:01.040642Z",
-     "iopub.status.busy": "2022-09-30T18:33:01.040104Z",
-     "iopub.status.idle": "2022-09-30T18:33:01.237236Z",
-     "shell.execute_reply": "2022-09-30T18:33:01.236100Z"
+     "iopub.execute_input": "2022-09-30T18:35:44.220552Z",
+     "iopub.status.busy": "2022-09-30T18:35:44.220269Z",
+     "iopub.status.idle": "2022-09-30T18:35:48.650102Z",
+     "shell.execute_reply": "2022-09-30T18:35:48.648930Z"
     }
    },
    "outputs": [
@@ -103,14 +103,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "INFO:srcopsmetrics.github_knowledge:Overall repositories found: 1\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:######################## Analysing operate-first/community ########################\r\n",
+      "\r\n",
+      "INFO:srcopsmetrics.utils:No repo identified, creating new directory at /home/runner/work/test-tool-ttm/test-tool-ttm/srcopsmetrics/bot_knowledge/operate-first/community\r\n",
       "Traceback (most recent call last):\r\n",
       "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/runpy.py\", line 197, in _run_module_as_main\r\n",
       "    return _run_code(code, main_globals, None,\r\n",
       "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/runpy.py\", line 87, in _run_code\r\n",
       "    exec(code, run_globals)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/cli.py\", line 26, in <module>\r\n",
-      "    from tqdm.contrib.logging import logging_redirect_tqdm\r\n",
-      "ModuleNotFoundError: No module named 'tqdm'\r\n"
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/cli.py\", line 217, in <module>\r\n",
+      "    cli(auto_envvar_prefix=\"MI\")\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 1130, in __call__\r\n",
+      "    return self.main(*args, **kwargs)\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 1055, in main\r\n",
+      "    rv = self.invoke(ctx)\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 1404, in invoke\r\n",
+      "    return ctx.invoke(self.callback, **ctx.params)\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 760, in invoke\r\n",
+      "    return __callback(*args, **kwargs)\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/cli.py\", line 175, in cli\r\n",
+      "    analyse_projects(repositories=repos, is_local=is_local, entities=entities_args)\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/bot_knowledge.py\", line 77, in analyse_projects\r\n",
+      "    allowed_entities = _get_all_entities()\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/bot_knowledge.py\", line 49, in _get_all_entities\r\n",
+      "    module = import_module(f\"srcopsmetrics.entities.{pkg.name}\")\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/importlib/__init__.py\", line 127, in import_module\r\n",
+      "    return _bootstrap._gcd_import(name[level:], package, level)\r\n",
+      "  File \"<frozen importlib._bootstrap>\", line 1030, in _gcd_import\r\n",
+      "  File \"<frozen importlib._bootstrap>\", line 1007, in _find_and_load\r\n",
+      "  File \"<frozen importlib._bootstrap>\", line 986, in _find_and_load_unlocked\r\n",
+      "  File \"<frozen importlib._bootstrap>\", line 680, in _load_unlocked\r\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 850, in exec_module\r\n",
+      "  File \"<frozen importlib._bootstrap>\", line 228, in _call_with_frames_removed\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/entities/commit.py\", line 27, in <module>\r\n",
+      "    from pydriller import Repository\r\n",
+      "ModuleNotFoundError: No module named 'pydriller'\r\n"
      ]
     }
    ],
