--- a/01_notebook_executed.ipynb
+++ b/01_notebook_executed.ipynb
@@ -16,10 +16,10 @@
    "id": "60e22449-72ec-41dc-85a8-70a90a1f577e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-30T18:35:44.183350Z",
-     "iopub.status.busy": "2022-09-30T18:35:44.183000Z",
-     "iopub.status.idle": "2022-09-30T18:35:44.204755Z",
-     "shell.execute_reply": "2022-09-30T18:35:44.203556Z"
+     "iopub.execute_input": "2022-09-30T18:41:00.715282Z",
+     "iopub.status.busy": "2022-09-30T18:41:00.714931Z",
+     "iopub.status.idle": "2022-09-30T18:41:00.737036Z",
+     "shell.execute_reply": "2022-09-30T18:41:00.736079Z"
     }
    },
    "outputs": [
@@ -58,10 +58,10 @@
    "id": "5f9cfe48-5a28-4338-bd5e-9a1e2844cd6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-30T18:35:44.209603Z",
-     "iopub.status.busy": "2022-09-30T18:35:44.209307Z",
-     "iopub.status.idle": "2022-09-30T18:35:44.214920Z",
-     "shell.execute_reply": "2022-09-30T18:35:44.214018Z"
+     "iopub.execute_input": "2022-09-30T18:41:00.743578Z",
+     "iopub.status.busy": "2022-09-30T18:41:00.743107Z",
+     "iopub.status.idle": "2022-09-30T18:41:00.749069Z",
+     "shell.execute_reply": "2022-09-30T18:41:00.748243Z"
     }
    },
    "outputs": [
@@ -92,10 +92,10 @@
    "id": "c8794a79-61a1-48b3-9a26-af31086fe622",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-30T18:35:44.220552Z",
-     "iopub.status.busy": "2022-09-30T18:35:44.220269Z",
-     "iopub.status.idle": "2022-09-30T18:35:48.650102Z",
-     "shell.execute_reply": "2022-09-30T18:35:48.648930Z"
+     "iopub.execute_input": "2022-09-30T18:41:00.753906Z",
+     "iopub.status.busy": "2022-09-30T18:41:00.753185Z",
+     "iopub.status.idle": "2022-09-30T18:41:31.254072Z",
+     "shell.execute_reply": "2022-09-30T18:41:31.252926Z"
     }
    },
    "outputs": [
@@ -107,38 +107,110 @@
       "INFO:srcopsmetrics.bot_knowledge:######################## Analysing operate-first/community ########################\r\n",
       "\r\n",
       "INFO:srcopsmetrics.utils:No repo identified, creating new directory at /home/runner/work/test-tool-ttm/test-tool-ttm/srcopsmetrics/bot_knowledge/operate-first/community\r\n",
-      "Traceback (most recent call last):\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/runpy.py\", line 197, in _run_module_as_main\r\n",
-      "    return _run_code(code, main_globals, None,\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/runpy.py\", line 87, in _run_code\r\n",
-      "    exec(code, run_globals)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/cli.py\", line 217, in <module>\r\n",
-      "    cli(auto_envvar_prefix=\"MI\")\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 1130, in __call__\r\n",
-      "    return self.main(*args, **kwargs)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 1055, in main\r\n",
-      "    rv = self.invoke(ctx)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 1404, in invoke\r\n",
-      "    return ctx.invoke(self.callback, **ctx.params)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 760, in invoke\r\n",
-      "    return __callback(*args, **kwargs)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/cli.py\", line 175, in cli\r\n",
-      "    analyse_projects(repositories=repos, is_local=is_local, entities=entities_args)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/bot_knowledge.py\", line 77, in analyse_projects\r\n",
-      "    allowed_entities = _get_all_entities()\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/bot_knowledge.py\", line 49, in _get_all_entities\r\n",
-      "    module = import_module(f\"srcopsmetrics.entities.{pkg.name}\")\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/importlib/__init__.py\", line 127, in import_module\r\n",
-      "    return _bootstrap._gcd_import(name[level:], package, level)\r\n",
-      "  File \"<frozen importlib._bootstrap>\", line 1030, in _gcd_import\r\n",
-      "  File \"<frozen importlib._bootstrap>\", line 1007, in _find_and_load\r\n",
-      "  File \"<frozen importlib._bootstrap>\", line 986, in _find_and_load_unlocked\r\n",
-      "  File \"<frozen importlib._bootstrap>\", line 680, in _load_unlocked\r\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 850, in exec_module\r\n",
-      "  File \"<frozen importlib._bootstrap>\", line 228, in _call_with_frames_removed\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/entities/commit.py\", line 27, in <module>\r\n",
-      "    from pydriller import Repository\r\n",
-      "ModuleNotFoundError: No module named 'pydriller'\r\n"
+      "INFO:srcopsmetrics.bot_knowledge:########################\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:Detected entities:\r\n",
+      "CodeFrequency # Commit # DependencyUpdate # Fork # Issue # IssueEvent # KebechetUpdateManager # License # PullRequest # PullRequestDiscussion # RawIssue # RawPullRequest # ReadMe # Release # Stargazer # ThothAdviseMetrics # ThothMetrics # ThothMetrics # ThothMetrics # ThothVersionManagerMetrics # TrafficClones # TrafficPaths # TrafficPaths # TrafficReferrers # TrafficClones # TrafficViews\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:########################\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:PullRequest inspection\r\n",
+      "INFO:srcopsmetrics.entities.tools.storage:Loading knowledge from Ceph\r\n",
+      "INFO:srcopsmetrics.entities.interface:Found previous PullRequest knowledge for operate-first/community with 90 records\r\n",
+      "INFO:srcopsmetrics.iterator:-------------PullRequest Analysis-------------\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #223\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #222\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #221\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #220\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #219\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #218\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #217\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #216\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #214\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #213\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #212\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #211\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #210\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #209\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #208\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #207\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #204\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #203\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #198\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #194\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #193\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #185\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #184\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #183\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #182\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #179\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #178\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #177\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #176\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #171\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #170\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #169\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #168\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #167\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #166\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #164\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #163\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #162\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #161\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #160\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #159\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #158\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #156\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #155\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #154\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #153\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #152\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #151\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #149\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #147\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #146\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #145\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #144\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #143\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #139\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #138\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #137\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #135\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #133\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #132\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #130\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #128\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #127\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #126\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #125\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #124\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #122\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #120\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #119\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #118\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #117\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #116\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #115\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #114\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #113\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #110\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #107\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #106\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #105\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #82\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #80\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #70\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #48\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #47\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #46\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #45\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #44\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #43\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #5\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #1\r\n",
+      "100%|██████████████████████| 90/90 [00:22<00:00,  3.95it/s, RATE remaining=4992]\r\n",
+      "INFO:srcopsmetrics.entities.interface:Nothing to store.\r\n",
+      "INFO:srcopsmetrics.entities.interface:\r\n",
+      "\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:\r\n",
+      "\r\n"
      ]
     }
    ],
