--- a/01_notebook_executed.ipynb
+++ b/01_notebook_executed.ipynb
@@ -16,10 +16,10 @@
    "id": "60e22449-72ec-41dc-85a8-70a90a1f577e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-30T21:16:50.656569Z",
-     "iopub.status.busy": "2022-09-30T21:16:50.656285Z",
-     "iopub.status.idle": "2022-09-30T21:16:50.673168Z",
-     "shell.execute_reply": "2022-09-30T21:16:50.672529Z"
+     "iopub.execute_input": "2022-10-06T20:34:54.944985Z",
+     "iopub.status.busy": "2022-10-06T20:34:54.944422Z",
+     "iopub.status.idle": "2022-10-06T20:34:54.961561Z",
+     "shell.execute_reply": "2022-10-06T20:34:54.960871Z"
     }
    },
    "outputs": [
@@ -58,10 +58,10 @@
    "id": "5f9cfe48-5a28-4338-bd5e-9a1e2844cd6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-30T21:16:50.677260Z",
-     "iopub.status.busy": "2022-09-30T21:16:50.677038Z",
-     "iopub.status.idle": "2022-09-30T21:16:50.681414Z",
-     "shell.execute_reply": "2022-09-30T21:16:50.680755Z"
+     "iopub.execute_input": "2022-10-06T20:34:54.965601Z",
+     "iopub.status.busy": "2022-10-06T20:34:54.965384Z",
+     "iopub.status.idle": "2022-10-06T20:34:54.969756Z",
+     "shell.execute_reply": "2022-10-06T20:34:54.969102Z"
     }
    },
    "outputs": [
@@ -92,10 +92,10 @@
    "id": "c8794a79-61a1-48b3-9a26-af31086fe622",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-30T21:16:50.685843Z",
-     "iopub.status.busy": "2022-09-30T21:16:50.685419Z",
-     "iopub.status.idle": "2022-09-30T21:17:03.143582Z",
-     "shell.execute_reply": "2022-09-30T21:17:03.142473Z"
+     "iopub.execute_input": "2022-10-06T20:34:54.974213Z",
+     "iopub.status.busy": "2022-10-06T20:34:54.973998Z",
+     "iopub.status.idle": "2022-10-06T20:35:13.814451Z",
+     "shell.execute_reply": "2022-10-06T20:35:13.813650Z"
     }
    },
    "outputs": [
@@ -115,6 +115,9 @@
       "INFO:srcopsmetrics.entities.tools.storage:Loading knowledge from Ceph\r\n",
       "INFO:srcopsmetrics.entities.interface:Found previous PullRequest knowledge for operate-first/community with 90 records\r\n",
       "INFO:srcopsmetrics.iterator:-------------PullRequest Analysis-------------\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #225\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #224\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:      -analysing review no. 1/1\r\n",
       "INFO:srcopsmetrics.entities.pull_request:Extracting PR #223\r\n",
       "INFO:srcopsmetrics.entities.pull_request:Extracting PR #222\r\n",
       "INFO:srcopsmetrics.entities.pull_request:Extracting PR #221\r\n",
@@ -205,10 +208,11 @@
       "INFO:srcopsmetrics.entities.pull_request:Extracting PR #43\r\n",
       "INFO:srcopsmetrics.entities.pull_request:Extracting PR #5\r\n",
       "INFO:srcopsmetrics.entities.pull_request:Extracting PR #1\r\n",
-      "100%|██████████████████████| 90/90 [00:08<00:00, 10.67it/s, RATE remaining=4994]\r\n",
-      "INFO:srcopsmetrics.entities.interface:Nothing to store.\r\n",
-      "INFO:srcopsmetrics.entities.interface:\r\n",
-      "\r\n",
+      "100%|██████████████████████| 92/92 [00:13<00:00,  6.76it/s, RATE remaining=4975]\r\n",
+      "INFO:srcopsmetrics.entities.interface:Knowledge file PullRequest.json\r\n",
+      "INFO:srcopsmetrics.entities.interface:new 2 entities\r\n",
+      "INFO:srcopsmetrics.entities.interface:(overall 92 entities)\r\n",
+      "INFO:srcopsmetrics.entities.interface:Saved on CEPH at opf-datacatalog/september/srcopsmetrics/bot_knowledge/operate-first/community/PullRequest.json\r\n",
       "INFO:srcopsmetrics.bot_knowledge:\r\n",
       "\r\n"
      ]
