--- a/01_notebook_executed.ipynb
+++ b/01_notebook_executed.ipynb
@@ -16,10 +16,10 @@
    "id": "60e22449-72ec-41dc-85a8-70a90a1f577e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-06T20:34:54.944985Z",
-     "iopub.status.busy": "2022-10-06T20:34:54.944422Z",
-     "iopub.status.idle": "2022-10-06T20:34:54.961561Z",
-     "shell.execute_reply": "2022-10-06T20:34:54.960871Z"
+     "iopub.execute_input": "2022-10-06T20:38:34.613982Z",
+     "iopub.status.busy": "2022-10-06T20:38:34.613664Z",
+     "iopub.status.idle": "2022-10-06T20:38:34.630174Z",
+     "shell.execute_reply": "2022-10-06T20:38:34.629558Z"
     }
    },
    "outputs": [
@@ -58,10 +58,10 @@
    "id": "5f9cfe48-5a28-4338-bd5e-9a1e2844cd6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-06T20:34:54.965601Z",
-     "iopub.status.busy": "2022-10-06T20:34:54.965384Z",
-     "iopub.status.idle": "2022-10-06T20:34:54.969756Z",
-     "shell.execute_reply": "2022-10-06T20:34:54.969102Z"
+     "iopub.execute_input": "2022-10-06T20:38:34.634701Z",
+     "iopub.status.busy": "2022-10-06T20:38:34.634263Z",
+     "iopub.status.idle": "2022-10-06T20:38:34.639012Z",
+     "shell.execute_reply": "2022-10-06T20:38:34.638516Z"
     }
    },
    "outputs": [
@@ -92,10 +92,10 @@
    "id": "c8794a79-61a1-48b3-9a26-af31086fe622",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-06T20:34:54.974213Z",
-     "iopub.status.busy": "2022-10-06T20:34:54.973998Z",
-     "iopub.status.idle": "2022-10-06T20:35:13.814451Z",
-     "shell.execute_reply": "2022-10-06T20:35:13.813650Z"
+     "iopub.execute_input": "2022-10-06T20:38:34.642357Z",
+     "iopub.status.busy": "2022-10-06T20:38:34.641943Z",
+     "iopub.status.idle": "2022-10-06T20:38:49.888503Z",
+     "shell.execute_reply": "2022-10-06T20:38:49.887531Z"
     }
    },
    "outputs": [
@@ -113,11 +113,10 @@
       "INFO:srcopsmetrics.bot_knowledge:########################\r\n",
       "INFO:srcopsmetrics.bot_knowledge:PullRequest inspection\r\n",
       "INFO:srcopsmetrics.entities.tools.storage:Loading knowledge from Ceph\r\n",
-      "INFO:srcopsmetrics.entities.interface:Found previous PullRequest knowledge for operate-first/community with 90 records\r\n",
+      "INFO:srcopsmetrics.entities.interface:Found previous PullRequest knowledge for operate-first/community with 92 records\r\n",
       "INFO:srcopsmetrics.iterator:-------------PullRequest Analysis-------------\r\n",
       "INFO:srcopsmetrics.entities.pull_request:Extracting PR #225\r\n",
       "INFO:srcopsmetrics.entities.pull_request:Extracting PR #224\r\n",
-      "INFO:srcopsmetrics.entities.pull_request:      -analysing review no. 1/1\r\n",
       "INFO:srcopsmetrics.entities.pull_request:Extracting PR #223\r\n",
       "INFO:srcopsmetrics.entities.pull_request:Extracting PR #222\r\n",
       "INFO:srcopsmetrics.entities.pull_request:Extracting PR #221\r\n",
@@ -208,11 +207,10 @@
       "INFO:srcopsmetrics.entities.pull_request:Extracting PR #43\r\n",
       "INFO:srcopsmetrics.entities.pull_request:Extracting PR #5\r\n",
       "INFO:srcopsmetrics.entities.pull_request:Extracting PR #1\r\n",
-      "100%|██████████████████████| 92/92 [00:13<00:00,  6.76it/s, RATE remaining=4975]\r\n",
-      "INFO:srcopsmetrics.entities.interface:Knowledge file PullRequest.json\r\n",
-      "INFO:srcopsmetrics.entities.interface:new 2 entities\r\n",
-      "INFO:srcopsmetrics.entities.interface:(overall 92 entities)\r\n",
-      "INFO:srcopsmetrics.entities.interface:Saved on CEPH at opf-datacatalog/september/srcopsmetrics/bot_knowledge/operate-first/community/PullRequest.json\r\n",
+      "100%|██████████████████████| 92/92 [00:10<00:00,  8.51it/s, RATE remaining=4965]\r\n",
+      "INFO:srcopsmetrics.entities.interface:Nothing to store.\r\n",
+      "INFO:srcopsmetrics.entities.interface:\r\n",
+      "\r\n",
       "INFO:srcopsmetrics.bot_knowledge:\r\n",
       "\r\n"
      ]
