--- a/01_notebook_executed.ipynb
+++ b/01_notebook_executed.ipynb
@@ -16,10 +16,10 @@
    "id": "60e22449-72ec-41dc-85a8-70a90a1f577e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-12T18:43:35.564499Z",
-     "iopub.status.busy": "2022-10-12T18:43:35.564253Z",
-     "iopub.status.idle": "2022-10-12T18:43:35.580941Z",
-     "shell.execute_reply": "2022-10-12T18:43:35.580272Z"
+     "iopub.execute_input": "2022-10-12T19:16:41.600885Z",
+     "iopub.status.busy": "2022-10-12T19:16:41.600632Z",
+     "iopub.status.idle": "2022-10-12T19:16:41.617142Z",
+     "shell.execute_reply": "2022-10-12T19:16:41.616516Z"
     }
    },
    "outputs": [
@@ -58,10 +58,10 @@
    "id": "5f9cfe48-5a28-4338-bd5e-9a1e2844cd6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-12T18:43:35.584919Z",
-     "iopub.status.busy": "2022-10-12T18:43:35.584707Z",
-     "iopub.status.idle": "2022-10-12T18:43:35.589046Z",
-     "shell.execute_reply": "2022-10-12T18:43:35.588383Z"
+     "iopub.execute_input": "2022-10-12T19:16:41.621246Z",
+     "iopub.status.busy": "2022-10-12T19:16:41.621039Z",
+     "iopub.status.idle": "2022-10-12T19:16:41.625317Z",
+     "shell.execute_reply": "2022-10-12T19:16:41.624675Z"
     }
    },
    "outputs": [
@@ -69,8 +69,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/\n",
-      "Downloaded file is being stored at october/srcopsmetrics/bot_knowledge///PullRequest.json\n"
+      "operate-first/community\n",
+      "Downloaded file is being stored at october/srcopsmetrics/bot_knowledge/operate-first/community/PullRequest.json\n"
      ]
     }
    ],
@@ -92,10 +92,10 @@
    "id": "c8794a79-61a1-48b3-9a26-af31086fe622",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-12T18:43:35.592855Z",
-     "iopub.status.busy": "2022-10-12T18:43:35.592624Z",
-     "iopub.status.idle": "2022-10-12T18:43:37.881827Z",
-     "shell.execute_reply": "2022-10-12T18:43:37.881050Z"
+     "iopub.execute_input": "2022-10-12T19:16:41.629089Z",
+     "iopub.status.busy": "2022-10-12T19:16:41.628885Z",
+     "iopub.status.idle": "2022-10-12T19:16:58.777351Z",
+     "shell.execute_reply": "2022-10-12T19:16:58.776570Z"
     }
    },
    "outputs": [
@@ -103,34 +103,119 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/runpy.py\", line 197, in _run_module_as_main\r\n",
-      "    return _run_code(code, main_globals, None,\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/runpy.py\", line 87, in _run_code\r\n",
-      "    exec(code, run_globals)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/cli.py\", line 217, in <module>\r\n",
-      "    cli(auto_envvar_prefix=\"MI\")\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 1130, in __call__\r\n",
-      "    return self.main(*args, **kwargs)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 1055, in main\r\n",
-      "    rv = self.invoke(ctx)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 1404, in invoke\r\n",
-      "    return ctx.invoke(self.callback, **ctx.params)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 760, in invoke\r\n",
-      "    return __callback(*args, **kwargs)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/cli.py\", line 168, in cli\r\n",
-      "    repos.extend(GitHubKnowledge().get_repositories(repository=rep.strip()))\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/github_handling.py\", line 92, in _wrapper\r\n",
-      "    return original_funcion(*args, **kwargs)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/github_knowledge.py\", line 57, in get_repositories\r\n",
-      "    repos.append(gh.get_repo(repository).full_name)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/github/MainClass.py\", line 330, in get_repo\r\n",
-      "    headers, data = self.__requester.requestJsonAndCheck(\"GET\", url)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/github/Requester.py\", line 353, in requestJsonAndCheck\r\n",
-      "    return self.__check(\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/github/Requester.py\", line 378, in __check\r\n",
-      "    raise self.__createException(status, responseHeaders, output)\r\n",
-      "github.GithubException.UnknownObjectException: 404 {\"message\": \"Not Found\", \"documentation_url\": \"https://docs.github.com/rest\"}\r\n"
+      "INFO:srcopsmetrics.github_knowledge:Overall repositories found: 1\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:######################## Analysing operate-first/community ########################\r\n",
+      "\r\n",
+      "INFO:srcopsmetrics.utils:No repo identified, creating new directory at /home/runner/work/ttmtool/ttmtool/srcopsmetrics/bot_knowledge/operate-first/community\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:########################\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:Detected entities:\r\n",
+      "CodeFrequency # Commit # DependencyUpdate # Fork # Issue # IssueEvent # KebechetUpdateManager # License # PullRequest # PullRequestDiscussion # RawIssue # RawPullRequest # ReadMe # Release # Stargazer # ThothAdviseMetrics # ThothMetrics # ThothMetrics # ThothMetrics # ThothVersionManagerMetrics # TrafficClones # TrafficPaths # TrafficPaths # TrafficReferrers # TrafficClones # TrafficViews\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:########################\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:PullRequest inspection\r\n",
+      "INFO:srcopsmetrics.entities.tools.storage:Loading knowledge from Ceph\r\n",
+      "INFO:srcopsmetrics.entities.interface:Found previous PullRequest knowledge for operate-first/community with 92 records\r\n",
+      "INFO:srcopsmetrics.iterator:-------------PullRequest Analysis-------------\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #229\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #228\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #225\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #224\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #223\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #222\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #221\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #220\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #219\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #218\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #217\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #216\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #214\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #213\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #212\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #211\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #210\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #209\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #208\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #207\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #204\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #203\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #198\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #194\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #193\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #185\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #184\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #183\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #182\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #179\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #178\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #177\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #176\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #171\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #170\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #169\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #168\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #167\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #166\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #164\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #163\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #162\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #161\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #160\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #159\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #158\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #156\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #155\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #154\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #153\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #152\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #151\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #149\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #147\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #146\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #145\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #144\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #143\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #139\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #138\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #137\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #135\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #133\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #132\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #130\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #128\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #127\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #126\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #125\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #124\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #122\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #120\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #119\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #118\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #117\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #116\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #115\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #114\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #113\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #110\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #107\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #106\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #105\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #82\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #80\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #70\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #48\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #47\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #46\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #45\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #44\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #43\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #5\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #1\r\n",
+      "100%|██████████████████████| 94/94 [00:12<00:00,  7.81it/s, RATE remaining=4966]\r\n",
+      "INFO:srcopsmetrics.entities.interface:Knowledge file PullRequest.json\r\n",
+      "INFO:srcopsmetrics.entities.interface:new 2 entities\r\n",
+      "INFO:srcopsmetrics.entities.interface:(overall 94 entities)\r\n",
+      "INFO:srcopsmetrics.entities.interface:Saved on CEPH at opf-datacatalog/october/srcopsmetrics/bot_knowledge/operate-first/community/PullRequest.json\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:\r\n",
+      "\r\n"
      ]
     }
    ],
