--- a/01_notebook_executed.ipynb
+++ b/01_notebook_executed.ipynb
@@ -16,10 +16,10 @@
    "id": "60e22449-72ec-41dc-85a8-70a90a1f577e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-14T13:49:20.067212Z",
-     "iopub.status.busy": "2022-10-14T13:49:20.066888Z",
-     "iopub.status.idle": "2022-10-14T13:49:20.086125Z",
-     "shell.execute_reply": "2022-10-14T13:49:20.085377Z"
+     "iopub.execute_input": "2022-10-14T18:21:05.533094Z",
+     "iopub.status.busy": "2022-10-14T18:21:05.532714Z",
+     "iopub.status.idle": "2022-10-14T18:21:05.558120Z",
+     "shell.execute_reply": "2022-10-14T18:21:05.557232Z"
     }
    },
    "outputs": [
@@ -58,10 +58,10 @@
    "id": "5f9cfe48-5a28-4338-bd5e-9a1e2844cd6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-14T13:49:20.090437Z",
-     "iopub.status.busy": "2022-10-14T13:49:20.090176Z",
-     "iopub.status.idle": "2022-10-14T13:49:20.094908Z",
-     "shell.execute_reply": "2022-10-14T13:49:20.094131Z"
+     "iopub.execute_input": "2022-10-14T18:21:05.563692Z",
+     "iopub.status.busy": "2022-10-14T18:21:05.563392Z",
+     "iopub.status.idle": "2022-10-14T18:21:05.568953Z",
+     "shell.execute_reply": "2022-10-14T18:21:05.568099Z"
     }
    },
    "outputs": [
@@ -92,10 +92,10 @@
    "id": "c8794a79-61a1-48b3-9a26-af31086fe622",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-14T13:49:20.099165Z",
-     "iopub.status.busy": "2022-10-14T13:49:20.098912Z",
-     "iopub.status.idle": "2022-10-14T13:49:20.845283Z",
-     "shell.execute_reply": "2022-10-14T13:49:20.844178Z"
+     "iopub.execute_input": "2022-10-14T18:21:05.574247Z",
+     "iopub.status.busy": "2022-10-14T18:21:05.573960Z",
+     "iopub.status.idle": "2022-10-14T18:21:18.142130Z",
+     "shell.execute_reply": "2022-10-14T18:21:18.141210Z"
     }
    },
    "outputs": [
@@ -103,8 +103,118 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python: /lib64/libm.so.6: version `GLIBC_2.29' not found (required by /__t/Python/3.9.14/x64/lib/libpython3.9.so.1.0)\r\n",
-      "python: /lib64/libpthread.so.0: version `GLIBC_2.30' not found (required by /__t/Python/3.9.14/x64/lib/libpython3.9.so.1.0)\r\n"
+      "INFO:srcopsmetrics.github_knowledge:Overall repositories found: 1\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:######################## Analysing operate-first/community ########################\r\n",
+      "\r\n",
+      "INFO:srcopsmetrics.utils:No repo identified, creating new directory at /home/runner/work/ttmtool/ttmtool/srcopsmetrics/bot_knowledge/operate-first/community\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:########################\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:Detected entities:\r\n",
+      "CodeFrequency # Commit # DependencyUpdate # Fork # Issue # IssueEvent # KebechetUpdateManager # License # PullRequest # PullRequestDiscussion # RawIssue # RawPullRequest # ReadMe # Release # Stargazer # ThothAdviseMetrics # ThothMetrics # ThothMetrics # ThothMetrics # ThothVersionManagerMetrics # TrafficClones # TrafficPaths # TrafficPaths # TrafficReferrers # TrafficClones # TrafficViews\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:########################\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:PullRequest inspection\r\n",
+      "INFO:srcopsmetrics.entities.tools.storage:Loading knowledge from Ceph\r\n",
+      "INFO:srcopsmetrics.entities.interface:Found previous PullRequest knowledge for operate-first/community with 94 records\r\n",
+      "INFO:srcopsmetrics.iterator:-------------PullRequest Analysis-------------\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #229\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #228\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #225\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #224\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #223\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #222\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #221\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #220\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #219\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #218\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #217\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #216\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #214\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #213\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #212\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #211\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #210\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #209\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #208\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #207\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #204\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #203\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #198\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #194\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #193\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #185\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #184\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #183\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #182\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #179\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #178\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #177\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #176\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #171\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #170\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #169\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #168\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #167\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #166\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #164\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #163\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #162\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #161\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #160\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #159\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #158\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #156\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #155\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #154\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #153\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #152\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #151\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #149\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #147\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #146\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #145\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #144\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #143\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #139\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #138\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #137\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #135\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #133\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #132\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #130\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #128\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #127\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #126\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #125\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #124\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #122\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #120\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #119\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #118\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #117\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #116\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #115\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #114\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #113\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #110\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #107\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #106\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #105\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #82\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #80\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #70\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #48\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #47\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #46\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #45\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #44\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #43\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #5\r\n",
+      "INFO:srcopsmetrics.entities.pull_request:Extracting PR #1\r\n",
+      "100%|██████████████████████| 94/94 [00:07<00:00, 12.55it/s, RATE remaining=4992]\r\n",
+      "INFO:srcopsmetrics.entities.interface:Nothing to store.\r\n",
+      "INFO:srcopsmetrics.entities.interface:\r\n",
+      "\r\n",
+      "INFO:srcopsmetrics.bot_knowledge:\r\n",
+      "\r\n"
      ]
     }
    ],
@@ -144,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.14"
   }
  },
  "nbformat": 4,
