--- a/01_notebook_executed.ipynb
+++ b/01_notebook_executed.ipynb
@@ -16,10 +16,10 @@
    "id": "60e22449-72ec-41dc-85a8-70a90a1f577e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-14T18:55:10.026556Z",
-     "iopub.status.busy": "2022-10-14T18:55:10.026214Z",
-     "iopub.status.idle": "2022-10-14T18:55:10.043356Z",
-     "shell.execute_reply": "2022-10-14T18:55:10.042584Z"
+     "iopub.execute_input": "2022-10-14T19:00:52.558770Z",
+     "iopub.status.busy": "2022-10-14T19:00:52.558236Z",
+     "iopub.status.idle": "2022-10-14T19:00:52.581236Z",
+     "shell.execute_reply": "2022-10-14T19:00:52.580334Z"
     }
    },
    "outputs": [
@@ -58,10 +58,10 @@
    "id": "5f9cfe48-5a28-4338-bd5e-9a1e2844cd6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-14T18:55:10.047842Z",
-     "iopub.status.busy": "2022-10-14T18:55:10.047435Z",
-     "iopub.status.idle": "2022-10-14T18:55:10.052394Z",
-     "shell.execute_reply": "2022-10-14T18:55:10.051812Z"
+     "iopub.execute_input": "2022-10-14T19:00:52.586485Z",
+     "iopub.status.busy": "2022-10-14T19:00:52.586067Z",
+     "iopub.status.idle": "2022-10-14T19:00:52.591903Z",
+     "shell.execute_reply": "2022-10-14T19:00:52.591077Z"
     }
    },
    "outputs": [
@@ -69,8 +69,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$ORG/$REPO\n",
-      "Downloaded file is being stored at oct12/srcopsmetrics/bot_knowledge/$ORG/$REPO/PullRequest.json\n"
+      "operate-first/community\n",
+      "Downloaded file is being stored at oct12/srcopsmetrics/bot_knowledge/operate-first/community/PullRequest.json\n"
      ]
     }
    ],
@@ -92,10 +92,10 @@
    "id": "c8794a79-61a1-48b3-9a26-af31086fe622",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-14T18:55:10.056434Z",
-     "iopub.status.busy": "2022-10-14T18:55:10.055766Z",
-     "iopub.status.idle": "2022-10-14T18:55:10.859935Z",
-     "shell.execute_reply": "2022-10-14T18:55:10.858974Z"
+     "iopub.execute_input": "2022-10-14T19:00:52.595306Z",
+     "iopub.status.busy": "2022-10-14T19:00:52.594899Z",
+     "iopub.status.idle": "2022-10-14T19:00:53.352784Z",
+     "shell.execute_reply": "2022-10-14T19:00:53.351631Z"
     }
    },
    "outputs": [
